--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -76,6 +76,7 @@
     background-color: transparent;
     padding: 10px;
     width: 100%;
+    text-transform: uppercase;
   }
 
   .mobile-navbar button {
