--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -80,6 +80,7 @@
     width: 100%;
     box-sizing: border-box;
     overflow-x: hidden; /* 🚫 Ne lógjon ki semmi vízszintesen */
+    margin-bottom: 50px;
   }
   
   .page-title {
