--- a/src/app/pages/admin/admin.component.scss
+++ b/src/app/pages/admin/admin.component.scss
@@ -10,6 +10,7 @@
   border-radius: 10px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   font-family: 'Chakra Petch', sans-serif;
+  margin-bottom: 50px;
 }
 
 h2, h3 {
