--- a/src/app/pages/browse/browse.component.scss
+++ b/src/app/pages/browse/browse.component.scss
@@ -15,6 +15,7 @@ body {
   border-radius: 12px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
   text-align: center;
+  margin-bottom: 50px;
 }
 
 h2 {
