--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -11,6 +11,7 @@
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   font-family: 'Chakra Petch', sans-serif;
   text-align: center;
+  margin-bottom: 50px;
 }
 
 h2, h3 {
