--- a/src/app/pages/registration/registration.component.html
+++ b/src/app/pages/registration/registration.component.html
@@ -1,4 +1,5 @@
 <form [formGroup]="registerForm" (ngSubmit)="onRegister()" class="auth-form">
+  <h2>Regisztráció</h2>
     <mat-form-field appearance="outline">
       <mat-label>Felhasználónév</mat-label>
       <input matInput formControlName="username">
