--- a/src/app/pages/torrent-detail/torrent-detail.component.scss
+++ b/src/app/pages/torrent-detail/torrent-detail.component.scss
@@ -10,6 +10,7 @@
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
   font-family: 'Chakra Petch', sans-serif;
   text-align: center;
+  margin-bottom: 50px;
 }
 
 h2 {
