--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,3 +58,52 @@ h1{
     font-size: 35pt;
 }
   }
+
+  /* Footer Stílusok */
+.footer {
+  background-color: #061258;
+  color: white;
+  padding: 20px 0;
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+}
+
+.footer-content {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.footer p {
+  font-size: 14px;
+  margin: 0;
+}
+
+.footer-links {
+  margin-top: 10px;
+}
+
+.footer-links a {
+  color: #0084ff;
+  text-decoration: none;
+  margin: 0 15px;
+  font-size: 14px;
+  transition: color 0.3s ease;
+}
+
+.footer-links a:hover {
+  color: #0056b3;
+}
+
+/* Responsive design for smaller screens */
+@media (max-width: 768px) {
+  .footer-links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;
+  }
+  
+  .footer-links a {
+    margin: 5px 0;
+  }
+}
