--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 
-/* Alapértelmezett beállítások */
-  
-/* Gépi nézet: navbar látszik, mobil navbar és sidenav rejtve */
+
 .desktop-navbar {
   display: flex;
   justify-content: center;
@@ -30,17 +28,17 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgb(6, 18, 88);  /* Félátlátszó háttér */
+  background-color: rgb(6, 18, 88);  
   overflow-x: hidden;
   transition: 0.3s;
   padding-top: 60px;
   text-align: center;
-  z-index: 9999; /* Biztosítjuk, hogy a sidenav a tartalom fölött legyen */
+  z-index: 9999; 
 }
 
-/* Sidenav nyitva van */
+
 .sidenav.open {
-  width: 250px; /* Amikor nyitva van */
+  width: 250px;
 }
 
 .sidenav .closebtn {
@@ -61,14 +59,14 @@
   padding: 10px 0;
 }
 
-/* Kék csík eltüntetése mobilnézetben */
+
 @media (max-width: 768px) {
 
   .desktop-navbar {
     display: none;
   }
 
-  /* Hamburgermenü és cím elrendezés mobilnézetben */
+
   .mobile-navbar {
     display: flex;
     justify-content: space-between;
@@ -81,25 +79,25 @@
 
   .mobile-navbar button {
     position: absolute;
-    left: 10px;  /* Bal oldali margó */
-    top: 10px;   /* Felső margó */
-    color: white; /* Fehér szín */
+    left: 10px;  
+    top: 10px; 
+    color: white; 
   }
 
   .mobile-navbar .menu-icon {
-    color: white; /* Fehér szín */
+    color: white; 
     font-size: 36px;
   }
 
-  /* A sidenav működése */
+
   .sidenav {
-    display: none; /* Alapértelmezés szerint rejtve */
+    display: none; 
   }
 
-  /* Sidenav nyitva van */
+
   .sidenav.open {
     display: block;
-    width: 250px; /* Amikor nyitva van */
+    width: 250px; 
   }
 
   .sidenav .closebtn {
@@ -120,20 +118,20 @@
     padding: 10px 0;
   }
 
-  /* Az overlay háttér, ami kitakarja a tartalmat */
+
   .content-under-sidenav {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Átlátszó fekete */
-    z-index: 9998; /* A sidenav alatti réteg */
-    display: none; /* Alapértelmezés szerint rejtve */
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 9998; 
+    display: none; 
   }
 
-  /* Amikor a sidenav nyitva van, az overlay megjelenik */
+
   .sidenav.open + .content-under-sidenav {
-    display: block; /* Megjelenik, ha open */
+    display: block;
   }
 }
