--- a/src/app/pages/browse/browse.component.scss
+++ b/src/app/pages/browse/browse.component.scss
@@ -16,6 +16,7 @@ body {
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
   text-align: center;
   margin-bottom: 50px;
+  background: linear-gradient(25deg, #061258, #062652);
 }
 
 h2 {
