--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -11,6 +11,7 @@
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   font-family: 'Chakra Petch', sans-serif;
   text-align: center;
+  background: linear-gradient(25deg, #061258, #062652);
   margin-bottom: 50px;
 }
 
@@ -81,7 +82,6 @@ button[disabled] {
   display: none;
 }
 
-/* Mobil nézet */
 @media (max-width: 768px) {
   .desktop-table {
     display: none;
