--- a/src/app/comment-section/comment-section.component.scss
+++ b/src/app/comment-section/comment-section.component.scss
@@ -2,7 +2,7 @@
 
 .comment-section {
   max-width: 800px;
-  margin: 30px auto;
+  margin: 30px;
   padding: 20px;
   background-color: #061258;
   color: white;
