--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -116,6 +116,7 @@
     font-size: 15pt;
     font-family: 'Chakra Petch', sans-serif;
     padding: 10px 0;
+    text-transform: uppercase;
   }
 
 
