--- a/src/app/pages/registration/registration.component.html
+++ b/src/app/pages/registration/registration.component.html
@@ -2,23 +2,30 @@
   <h2>Regisztráció</h2>
     <mat-form-field appearance="outline">
       <mat-label>Felhasználónév</mat-label>
-      <input matInput formControlName="username">
+      <input matInput formControlName="username" autocomplete="username">
     </mat-form-field>
     
     <mat-form-field appearance="outline">
       <mat-label>Email</mat-label>
-      <input matInput formControlName="email" type="email">
+      <input matInput formControlName="email" type="email" autocomplete="email">
+      <mat-error *ngIf="registerForm.get('email')?.hasError('required')">
+  Az email megadása kötelező
+</mat-error>
+<mat-error *ngIf="registerForm.get('email')?.hasError('email')">
+  Érvénytelen email cím
+</mat-error>
     </mat-form-field>
     
     <mat-form-field appearance="outline">
       <mat-label>Jelszó</mat-label>
-      <input matInput formControlName="password" type="password">
+      <input matInput formControlName="password" type="password" autocomplete="new-password">
     </mat-form-field>
     
     <mat-form-field appearance="outline">
       <mat-label>Jelszó megerősítése</mat-label>
-      <input matInput formControlName="confirmPassword" type="password">
+      <input matInput formControlName="confirmPassword" type="password" autocomplete="new-password">
     </mat-form-field>
+    
   
     <button mat-raised-button type="submit" [disabled]="registerForm.invalid" class="auth-button">Regisztráció</button>
   </form>
